# swr

./: .gitignore  CMakeLists.txt  README.md  data-collection-architecture.md  development-plan.md  main.cpp  modbus-batch-read-design.md  polling-log-design.md  smartroute_backup_restore_development_plan.md  smartroute_user_management_policy.md  user_management_todo.md
.claude/: settings.json
DB Backup/etc-swr/: config.json  config.xml
DB Backup/var-lib-swr/: smartroute.db
DB Backup/var-log-swr/: smartroute_log.db  smartroute_log.db-shm  smartroute_log.db-wal
api/: ApiServer.cpp  ApiServer.h
config/: AppConfig.cpp  AppConfig.h  SystemConfig.cpp  SystemConfig.h
data_collection/comm/: DeviceClientFactory.cpp  DeviceClientFactory.h  IDeviceClient.h  RegisterExecutor.cpp  RegisterExecutor.h  SerialBus.cpp  SerialBus.h
data_collection/comm/modbus/: ModbusASCIIClient.cpp  ModbusASCIIClient.h  ModbusRTUClient.cpp  ModbusRTUClient.h  ModbusTCPClient.cpp  ModbusTCPClient.h
data_collection/comm/pclink/: PcLinkClient.cpp  PcLinkClient.h  PcLinkSumTCPClient.cpp  PcLinkSumTCPClient.h
data_collection/comm/pclink/references/: pclinkdrv.cpp  pclinkdrv.h  pclinketh.cpp  pclinketh.h
data_collection/database/: DeviceDatabase.cpp  DeviceDatabase.h
data_collection/model/: DeviceModels.h  UnifiedRegister.h
data_collection/polling/: LogWriterThread.cpp  LogWriterThread.h  PollLogQueue.h  PollingManager.cpp  PollingManager.h  SerialWorker.cpp  SerialWorker.h  TcpWorker.cpp  TcpWorker.h
data_collection/processor/: DataCollector.cpp  DataCollector.h
data_collection/store/: DeviceList.cpp  DeviceList.h  RegisterTable.cpp  RegisterTable.h  RegisterTable.md
docs/architecture/: data-collection.md  logging.md  modbus-batch-read.md  modbus-server.md
docs/policy/: user-management.md
docs/spec/: Modbus_Comm_Spec.md
maintenance/: BackupManager.cpp  BackupManager.h  BackupModels.h  RestoreManager.cpp  RestoreManager.h
modbus_server/: ModbusTcpServer.cpp  ModbusTcpServer.h  README.md  RegisterAddressMap.h  todo_frontPage.md
test/modbusServer/: README.md  test_modbus_server.py
trend/: implement_plan.md
utils/: Logger.cpp  Logger.h  NetworkConfigurator.cpp  NetworkConfigurator.h  SystemMonitor.cpp  SystemMonitor.h
